manifest/bhasai/dataset-service/ingress-dataset-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataset-service 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "dataset-service.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dataset-service
            port:
              number: 80
---
